# RenderEclipse-Tools

./: .gitattributes  FileFormats.md  MiscResearch.md  README.md  REE V1.rar
Extra tools and scripts/: FBXFtest.cpp  SourceRETH.cpp  dataSplitter.cpp  tex_SilentHillClimax.py
Extra tools and scripts/DataSplitter/: dataSplitter.cpp
Extra tools and scripts/External Programs Scripts/: ClimaxSH_Unpack_Resource.bms  tex_SilentHillClimax.py
Extra tools and scripts/FBXFtest/: FBXFtest.cpp
Extra tools and scripts/String Hash Test/: StrHashTest.cpp
RenderEclipseTools-src/: CMakeLists.txt  readme.txt
RenderEclipseTools-src/src/: ARC.cpp  ARC.h  REE.rc  fileLoader.cpp  fileLoader.h  hashes.reth  main.cpp  reth.cpp  reth.h  wxwindow.cpp  wxwindow.h
SHSMTool/: ARC.cpp  SHSMTool.aps  SHSMTool.rc  SHSMTool.sln  SHSMTool.vcxproj  SHSMTool.vcxproj.filters  Uphashes.reth  hashes.reth  resource.h  reth.cpp  reth.h
